# AudioDesk

./: .gitignore  CMakeLists.txt  FindJsoncpp.cmake
interfaces/: button_row.glade  main.glade  setup.glade  setup.glade~
interfaces/css/: style.css
scripts/bash/: install_virtmic.sh  play_audio.sh  stream_audio.sh  uninstall_virtmic.sh
scripts/python/: dk.raw  get_default_device.py  scan_for_device.py  write_pcm_audio.py
src/: CMakeLists.txt  audiodesk.cpp  audiodesk.fwd.hpp  audiodesk.hpp  audiomanager.cpp  audiomanager.hpp  button_row.cpp  button_row.hpp  device_querier.cpp  device_querier.hpp  ini.cpp  ini.hpp  iniparams.h  main.cpp  main.hpp  main_window.cpp  main_window.hpp  setup.cpp  setup.hpp  setup_window.cpp  setup_window.fwd.hpp  setup_window.hpp  sound.cpp  sound.hpp  sound_box.cpp  sound_box.hpp  soundfx_api.cpp  soundfx_api.hpp  utils.cpp  utils.hpp  windows.fwd.hpp
templates/: audiodesk.ini
